...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="55dp"
    tools:context=".menu.StartGameFragment">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:gravity="center_horizontal"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <Button
        android:id="@+id/button_localGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/local_game"
        app:layout_constraintBottom_toBottomOf="parent"
...
