<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals
        name="points">
        <item quantity="one">%d pt </item>
        <item quantity="other">%d pts</item>
    </plurals>
</resources>